src/test/ui/issues/issue-1XXXX/issue-17994.rs
trait Tr {}
type Huh<T> where T: Tr = isize; //~  ERROR type parameter `T` is unused
fn main() {}
